<resources>
    <string name="app_name">Material Login Example</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>


    <string name="website">Website</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="confirm_your_info">Confirm Your Account</string>
    <string name="chosen_password">Your Chosen password</string>

</resources>
