<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Country Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Country"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>


        <!-- UserName Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">



            <TextView
                android:id="@+id/headline2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/register_here"
                android:textSize="@dimen/headline_size" />






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:id="@+id/tvFirstName"
                android:layout_below="@+id/headline2"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etFirstName"
                android:layout_alignBaseline="@+id/tvFirstName"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:id="@+id/tvLastName"
                android:layout_below="@+id/tvFirstName"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLastName"
                android:layout_alignBaseline="@+id/tvLastName"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>







            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/tvEmail"
                android:layout_below="@+id/tvLastName"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/etEmail"
                android:layout_alignBaseline="@+id/tvEmail"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/tvCountry"
                android:layout_below="@+id/tvEmail"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCountry"
                android:layout_alignBaseline="@+id/tvCountry"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/tvGender"
                android:layout_below="@+id/tvCountry"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etGender"
                android:layout_alignBaseline="@+id/tvGender"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/tvUsername"
                android:layout_below="@+id/tvGender"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername"
                android:layout_alignBaseline="@+id/tvUsername"
                android:layout_toRightOf="@id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/tvPassword"
                android:layout_below="@+id/tvUsername"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:layout_alignBaseline="@+id/tvPassword"
                android:layout_toRightOf="@+id/tvFirstName"
                android:layout_toEndOf="@+id/tvFirstName" />




        </RelativeLayout>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/create_account" />

    </LinearLayout>
</ScrollView>
